# scientificcomputing_bicocca_2024

./: .buildinfo  .gitignore  .gitmodules  BicoccaCoursePython2024.Documentation.html  BicoccaCoursePython2024.Lesson_05.html  BicoccaCoursePython2024.Lesson_06.html  BicoccaCoursePython2024.Lesson_08.html  BicoccaCoursePython2024.prima_lezione.html  BicoccaCoursePython2024.quarta_lezione.html  BicoccaCoursePython2024.seconda_lezione.html  BicoccaCoursePython2024.settima_lezione.html  BicoccaCoursePython2024.terza_lezione.html  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
.doctrees/: BicoccaCoursePython2024.Documentation.doctree  BicoccaCoursePython2024.Lesson_05.doctree  BicoccaCoursePython2024.Lesson_06.doctree  BicoccaCoursePython2024.Lesson_08.doctree  BicoccaCoursePython2024.prima_lezione.doctree  BicoccaCoursePython2024.quarta_lezione.doctree  BicoccaCoursePython2024.seconda_lezione.doctree  BicoccaCoursePython2024.settima_lezione.doctree  BicoccaCoursePython2024.terza_lezione.doctree  environment.pickle  index.doctree  modules.doctree
.doctrees/SolvedExercises/: Lesson1.doctree  Lesson7.doctree
.github/workflows/: BuildDocumentation.yml  CheckTag.yml  DeploytoTestPyPI.yml  Lezione8_tests.yml  dummyaction.yml
Esercizi/: AppuntiGit.md  L05_mathematica.nb  README.md
Esercizi/BicoccaCoursePython2024/: MANIFEST.in  README.md  setup.cfg
Esercizi/BicoccaCoursePython2024/docs/: BicoccaCoursePython2024.Documentation.rst  BicoccaCoursePython2024.Lesson_05.rst  BicoccaCoursePython2024.Lesson_08.rst  BicoccaCoursePython2024.prima_lezione.rst  BicoccaCoursePython2024.quarta_lezione.rst  BicoccaCoursePython2024.rst  BicoccaCoursePython2024.seconda_lezione.rst  BicoccaCoursePython2024.settima_lezione.rst  BicoccaCoursePython2024.terza_lezione.rst  conf.py  index.rst  make.bat  modules.rst
Esercizi/BicoccaCoursePython2024/src/BicoccaCoursePython2024/: __init__.py  prima_lezione.py  quarta_lezione.py  seconda_lezione.py  settima_lezione.py  terza_lezione.py
Esercizi/BicoccaCoursePython2024/test/: PoP10_GameOfLife.npy  ottava_lezione_test.py
Esercizi/MyPackage/: setup.cfg
Esercizi/MyPackage/src/MyPackage/: __init__.py  seconda_lezione.py  terza_lezione.py
Esercizi/MyPackage/test/: ottava_lezione_test.py
Esercizi/SolvedExercises/: Lesson5.nb  Lesson7.ipynb
SolvedExercises/: Lesson1.html  Lesson1.ipynb  Lesson7.html
_modules/: index.html
_modules/BicoccaCoursePython2024/: prima_lezione.html  quarta_lezione.html  seconda_lezione.html  settima_lezione.html  terza_lezione.html
_sources/: BicoccaCoursePython2024.Documentation.rst.txt  BicoccaCoursePython2024.Lesson_06.rst.txt  BicoccaCoursePython2024.Lesson_08.rst.txt  BicoccaCoursePython2024.prima_lezione.rst.txt  BicoccaCoursePython2024.quarta_lezione.rst.txt  BicoccaCoursePython2024.seconda_lezione.rst.txt  index.rst.txt  modules.rst.txt
