[metadata]
name = BicoccaCoursePython2024
version = 0.0.1
description = Libreria per il corso di scientific python di Gerosa
author = Francesco Turini
author_email = fturini.turini7@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

url = https://github.com/fturini98/scientificcomputing_bicocca_2024.git@Esercizi-FrancescoTurini

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    numpy
    scipy
    matplotlib
    numba
python_requires = >=3.7

[options.packages.find]
where = src
